--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>spring6-ioc-annotation</module>
         <module>spring6-reflect</module>
         <module>lvck1-spring6</module>
+        <module>spring6-aop</module>
     </modules>
 
     <properties>
@@ -26,6 +27,16 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>6.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>6.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
             <version>6.0.2</version>
         </dependency>
 
