--- a/spring-jdbc-tx/src/main/resources/jdbc.properties
+++ b/spring-jdbc-tx/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.username=root
 jdbc.password=123456
-jdbc.url=jdbc:mysql://localhost:3306/spring?characterEncoding=utf-8&useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/spring?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 jdbc.driver=com.mysql.cj.jdbc.Driver
